--- a/composer.json
+++ b/composer.json
@@ -12,16 +12,16 @@
     "require": {
         "php": "^7.1.3",
         "dompdf/dompdf": "^0.8.0",
-        "illuminate/database": "~5.7.0|~5.8.0",
-        "illuminate/support": "~5.7.0|~5.8.0",
+        "illuminate/database": "~5.7.0|~5.8.0|^6.0|^7.0",
+        "illuminate/support": "~5.7.0|~5.8.0|^6.0|^7.0",
         "nesbot/carbon": "^1.26.3 || ^2.0",
         "symfony/http-kernel": "~4.0",
         "unicodeveloper/laravel-paystack": "^1.0"
     },
     "require-dev": {
-        "illuminate/http": "~5.7.0|~5.8.0",
-        "illuminate/routing": "~5.7.0|~5.8.0",
-        "illuminate/view": "~5.7.0|~5.8.0",
+        "illuminate/http": "~5.7.0|~5.8.0|^6.0|^7.0",
+        "illuminate/routing": "~5.7.0|~5.8.0|^6.0|^7.0",
+        "illuminate/view": "~5.7.0|~5.8.0|^6.0|^7.0",
         "mockery/mockery": "~1.0",
         "orchestra/testbench": "~3.0",
         "phpunit/phpunit": "^7.0"
